--- a/index.html
+++ b/index.html
@@ -15,15 +15,46 @@
 		
 		<!-- banner -->
 		<div class="banner">
-			<div class="banner_img">img</div>
-			<div class="banner_info">info</div>
+			<div class="banner_img">
+				<div class="banner_imgl"></div>
+				<div class="banner_imgr"></div>
+			</div>
+			<div class="banner_info">
+				<div class="info-header">
+					<h3><u>About<br />特色咖啡喝法</u></h3>
+					<p class="info-con">將起司丟入熱咖啡攪拌融化,味道嘗起來更富有甜膩香氣。 </p>
+				</div>
+				<p class="info-middle">700</p>
+				<div class="info-footer clearfix">
+					<div class="info-footerl">3.2</div>
+					<div class="info-footerr"><p>css<small>cssscsscsscss</small></p></div>
+				</div>
+			
+			</div>
 		</div>
 		
-		<!-- 新闻列表 -->
-		<div class="news">
-			<div class="news_what"></div>
-			<div class="news_when"></div>
-			<div class="news_how"></div>
+		<!-- 咖啡介绍 -->
+		<div class="introduce">
+			<div class="introduce_what">
+				<h5><a href="###">咖啡介绍</a></h5>
+				<p>“咖啡”一词源自希腊语“Kaweh”，意思是“力量与热情”。咖啡树是属茜草科常绿小乔木，日常饮用的咖啡是用咖啡豆配合各种不同的烹煮器具制作出来的，而咖啡豆就是指咖啡树果实内之果仁，再用适当的烘焙方法烘焙而成。在世界各地，人们越来越爱喝咖啡。随之而来的“咖啡文化”充满生活的每个时刻。每个时刻。每个时刻。每个时刻。</p>
+			</div>
+			<div class="introduce_when">
+				<h5><a href="###">咖啡起源</a></h5>
+				<p>“咖啡”一词源自希腊语“Kaweh”，是世界三大饮料之一。咖啡是用咖啡豆制成。咖啡豆是指咖啡树果实内之果仁。咖啡树是属山椒科的常绿灌木或小乔木。有关咖啡起源的传说各式各样，不过大多因为其荒诞离奇而被人们淡忘了。被人们淡忘了。被人们淡忘了。被人们淡忘了。被人们淡忘了。</p>
+			</div>
+			<div class="introduce_how">
+				<h5><a href="###">咖啡问答</a></h5>
+				<p class="text">
+					喝咖啡的好处和坏处?喝咖啡对心脏有影响吗?
+					咖啡怎么做好吃?
+				</p>
+				<p class="percent">
+					<span>waht------ <i>50%</i></span>
+					<span>waht------ <i>20%</i></span>
+					<span>waht------ <i>30%</i></span>
+				</p>
+			</div>
 		</div>
 
 		<!-- 焦点 -->
