--- a/index.html
+++ b/index.html
@@ -89,7 +89,25 @@
 						<h2>猫屎咖啡  <i>猫屎咖啡的来历历</i></h2>
 					</div>
 				</div>
-				<div class="focus_list"></div>
+				<div class="focus_list">
+					<ul>
+						<li><a href="###">前端前端前端前端前端............<em>前端</em></a></li>
+						<li><a href="###">前端前端前端前端前端............<em>前端</em></a></li>
+						<li><a href="###">前端前端前端前端前端............<em>前端</em></a></li>
+
+					</ul>
+					<div class="sm_section">
+						<div class="section_info">
+							<div class="section_info_l"><span>0</span></div>
+							<div class="section_info_text">
+								<h2>ONE TWO</h2>
+								<h2>THREE FOUR FIVE</h2>
+								<p class="first">hello world hello world</p>
+								<p>hello world </p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
