--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 				</div>
 				<div class="focus_list">
 					<ul>
-						<li><a href="###">前端前端前端前端前端............<em>前端</em></a></li>
-						<li><a href="###">前端前端前端前端前端............<em>前端</em></a></li>
-						<li><a href="###">前端前端前端前端前端............<em>前端</em></a></li>
+						<li><a href="###">前端前端前端前端前端..........................<em>前端</em></a></li>
+						<li><a href="###">前端前端前端前端前端..........................<em>前端</em></a></li>
+						<li><a href="###">前端前端前端前端..............................<em>前端</em></a></li>
 
 					</ul>
 					<div class="sm_section">
@@ -107,6 +107,12 @@
 							</div>
 						</div>
 					</div>
+
+					<blockquote cite="http://developer.mozilla.org" >
+					  <p>hello world hello world hello world hello world hello world hello world hello world hello world hello world hello world </p>
+					</blockquote>
+
+				
 				</div>
 			</div>
 		</div>
